<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activities.KPLoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/colorMain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="@dimen/header_title_size"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_size">

        <RelativeLayout
            android:id="@+id/login_logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/padding_size">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:scaleType="fitXY"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_size"
            android:paddingBottom="@dimen/padding_size"
            android:layout_below="@+id/login_logo_view"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner">
                <EditText
                    android:id="@+id/login_et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_login_et_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textEmailAddress"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/padding_size">
                <EditText
                    android:id="@+id/login_et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_login_et_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textPassword"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_bt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/login_input_view"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/login_bt_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_login_bt_signin"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_bt_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonGoogle"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size"
                android:layout_marginTop="@dimen/padding_size">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_google"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_login_bt_signin_google"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/padding_size"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_bt_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonFacebook"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size"
                android:layout_marginTop="@dimen/padding_size">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_facebook"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_login_bt_signin_facebook"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/padding_size"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_tv_signup"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/bt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSignupText"
                android:text="@string/activity_login_bt_signup"
                android:layout_marginLeft="@dimen/padding_size"
                android:textStyle="italic"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
