<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activities.KPRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/colorMain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="@dimen/header_title_size"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:id="@+id/activity_register_bt_back"
            android:layout_width="@dimen/header_height"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/padding_size"
                android:scaleType="fitXY"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_size">

        <LinearLayout
            android:id="@+id/register_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_size"
            android:paddingBottom="@dimen/padding_size"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner">
                <EditText
                    android:id="@+id/register_et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_register_et_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textEmailAddress"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/padding_size">
                <EditText
                    android:id="@+id/register_et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_register_et_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textPassword"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/padding_size">
                <EditText
                    android:id="@+id/register_et_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_register_et_confirm"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textPassword"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_bt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/register_bt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_register_bt_signup"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_bt_signup_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonGoogle"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size"
                android:layout_marginTop="@dimen/padding_size"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_google"
                        android:scaleType="fitXY"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_register_bt_signup_google"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/padding_size"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_bt_signup_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonFacebook"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size"
                android:layout_marginTop="@dimen/padding_size"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_facebook"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_register_bt_signup_facebook"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/padding_size"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
