<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activities.KPResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/colorMain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_reset_password_title"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="@dimen/header_title_size"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/activity_reset_password_bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_size"
            android:scaleType="fitXY"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_size">

        <LinearLayout
            android:id="@+id/activity_reset_password_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_size"
            android:paddingBottom="@dimen/padding_size"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/padding_size">
                <EditText
                    android:id="@+id/activity_reset_password_et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_register_et_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textPassword"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/padding_size">
                <EditText
                    android:id="@+id/activity_reset_password_et_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:hint="@string/activity_register_et_confirm"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorEditTextHint"
                    android:inputType="textPassword"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_reset_password_bt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/activity_reset_password_bt_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padding_size"
                android:paddingBottom="@dimen/padding_size">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_reset_password_bt_title"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
